--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,19 @@ target/
 profile_default/
 ipython_config.py
 
+
+*.csv
+
+*.ipynb
+
+*.db
+
+*.png
+
+bayesian/
+bayesian_tests/
+
+
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
